@@ -1,3 +1,4 @@
+2025-03-03 (3cf168f): test for macos arm64 build
 2025-03-03 (2395866): test for macos arm64 build
 2025-03-03 (121858a): i18n update
 2025-03-03 (72b41d6): i18n update
